# opencl-paste

./: CMakeLists.txt  hellocl.cpp  hellocl_kernels.cl  helper.cpp  poisson_test.cpp  texture_test.cpp
cmake/: CompilerFlags.txt
src/: CMakeLists.txt  context.cpp  context.h  gl_context.cpp  gl_context.h  glwidget.cpp  glwidget.h  hellocl_kernels.cl  helper.cpp  main.cpp  opencl.cpp  opencl.h  poisson_test.cpp  solver.cpp  solver.h  window.cpp  window.h
src/frontend/: CMakeLists.txt  glwidget.cpp  glwidget.h  window.h
src/kernels/: gl_kernels.cl  hellocl_kernels.cl
src/tests/: CMakeLists.txt  test_calculate_kernel.cpp  test_subsample.cpp
